[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/screens/LobbyScreen.gd" type="Script" id=1]
[ext_resource path="res://label_theme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/arrows/arrow_v3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/arrows/arrow_v3_pressed.png" type="Texture" id=4]
[ext_resource path="res://scenes/screens/MenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://label_theme_bigger.tres" type="Theme" id=6]
[ext_resource path="res://Sprites/ships/ship_red.png" type="Texture" id=7]
[ext_resource path="res://Sprites/arrows/arrow_v3_reversed.png" type="Texture" id=8]
[ext_resource path="res://Sprites/arrows/arrow_v3_pressed_reversed.png" type="Texture" id=9]

[sub_resource type="Theme" id=1]

[node name="LobbyScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1180.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 363.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9
split_offset = -235
dragger_visibility = 2

[node name="ExitButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VSplitContainer"]
margin_right = 363.0
margin_bottom = 75.0
size_flags_horizontal = 5
size_flags_vertical = 3
theme = ExtResource( 2 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VSplitContainer"]
margin_top = 75.0
margin_right = 363.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 20
custom_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/VSplitContainer/MarginContainer"]
margin_top = 20.0
margin_right = 363.0
margin_bottom = 505.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="PlayerList" type="ItemList" parent="MarginContainer/HBoxContainer/VSplitContainer/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 367.0
margin_right = 771.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 450
custom_constants/margin_bottom = 0

[node name="StartButton" parent="MarginContainer/HBoxContainer/MarginContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 450.0
margin_right = 404.0
margin_bottom = 620.0
size_flags_stretch_ratio = 0.8
theme = SubResource( 1 )

[node name="Label" parent="MarginContainer/HBoxContainer/MarginContainer/StartButton" index="0"]
text = "Start"
align = 1
valign = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 775.0
margin_right = 1180.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 100
custom_constants/margin_bottom = 40

[node name="VSplitContainer2" type="VSplitContainer" parent="MarginContainer/HBoxContainer/MarginContainer2"]
margin_top = 100.0
margin_right = 405.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -141
dragger_visibility = 2

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VSplitContainer2"]
margin_right = 405.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 60
dragger_visibility = 2

[node name="NameEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/MarginContainer2/VSplitContainer2/HSplitContainer"]
margin_top = 16.0
margin_right = 262.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 2 )
max_length = 10
placeholder_text = "Change Name"

[node name="SetNameButton" parent="MarginContainer/HBoxContainer/MarginContainer2/VSplitContainer2/HSplitContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 262.0
margin_right = 405.0
margin_bottom = 99.0

[node name="Label" parent="MarginContainer/HBoxContainer/MarginContainer2/VSplitContainer2/HSplitContainer/SetNameButton" index="0"]
theme = ExtResource( 6 )
text = "Set"
align = 1
valign = 0

[node name="HSplitContainer2" type="HSplitContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VSplitContainer2"]
margin_top = 99.0
margin_right = 405.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 85
dragger_visibility = 2

[node name="AvatarTexture" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer2/VSplitContainer2/HSplitContainer2"]
margin_right = 287.0
margin_bottom = 381.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer2/VSplitContainer2/HSplitContainer2"]
margin_left = 287.0
margin_right = 405.0
margin_bottom = 381.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 80
custom_constants/margin_left = 20
custom_constants/margin_bottom = 80

[node name="NextTextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer/MarginContainer2/VSplitContainer2/HSplitContainer2/MarginContainer"]
margin_left = 20.0
margin_top = 80.0
margin_right = 118.0
margin_bottom = 301.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/HBoxContainer/VSplitContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer2/VSplitContainer2/HSplitContainer/SetNameButton" to="." method="_on_SetNameButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer2/VSplitContainer2/HSplitContainer2/MarginContainer/NextTextureButton" to="." method="_on_NextTextureButton_pressed"]

[editable path="MarginContainer/HBoxContainer/MarginContainer/StartButton"]

[editable path="MarginContainer/HBoxContainer/MarginContainer2/VSplitContainer2/HSplitContainer/SetNameButton"]
